--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-shield-alt"></i>
-                    <span>CyberKenya</span>
+                    <span>Akubrecah Entertainment</span>
                 </div>
                 
                 <nav class="nav desktop-nav">
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Secure Your <span class="gradient-text">Digital Future</span></h1>
+                    <h1>Cyber Cafe <span class="gradient-text">Digital CyberCafe & Services</span></h1>
                     <p>Kenya's premier digital services provider offering comprehensive solutions for government services, academic support, cybersecurity, and business growth. Your trusted partner in the digital world.</p>
                     <div class="hero-buttons">
                         <a href="contact.html" class="btn btn-primary">
@@ -66,7 +66,7 @@
                     <div class="hero-card card-2">
                         <i class="fas fa-lock"></i>
                         <h3>Government Services</h3>
-                        <p>KRA, NTSA, E-citizen support</p>
+                        <p>KRA, NTSA, E-citizen Service</p>
                     </div>
                     <div class="hero-card card-3">
                         <i class="fas fa-eye"></i>
