modified:   about.html

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-shield-alt"></i>
-                    <span>CyberKenya</span>
+                    <span>Akubrecah Entertainment</span>
                 </div>
                 
                 <nav class="nav desktop-nav">
@@ -44,14 +44,14 @@
     <section class="page-section">
         <div class="container">
             <div class="page-header">
-                <h1>About CyberKenya</h1>
+                <h1>About Akubrecah Entertainment</h1>
                 <p>Leading Kenya's digital transformation with innovative solutions and unwavering commitment to excellence.</p>
             </div>
 
             <div class="about-content">
                 <div class="about-text">
                     <h2>Our Mission</h2>
-                    <p>At CyberKenya, we're dedicated to bridging the digital divide and empowering individuals and businesses across Kenya with comprehensive digital services. From government documentation to cybersecurity, we provide expert solutions that simplify complex processes.</p>
+                    <p>At Akubrecah Entertainment we're dedicated to bridging the digital divide and empowering individuals and businesses across Kenya with comprehensive digital services. From government documentation to cybersecurity, we provide expert solutions that simplify complex processes.</p>
                     <p>Our team combines local expertise with international standards to deliver services that meet the unique needs of the Kenyan market. We believe in making digital services accessible, secure, and efficient for everyone.</p>
                     <div class="badges">
                         <span class="badge">Government Certified</span>
@@ -76,21 +76,21 @@
                     <div class="stat-icon">
                         <i class="fas fa-users"></i>
                     </div>
-                    <div class="stat-value">500+</div>
+                    <div class="stat-value">5000+</div>
                     <div class="stat-label">Clients Served</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">
                         <i class="fas fa-award"></i>
                     </div>
-                    <div class="stat-value">10+</div>
+                    <div class="stat-value">5+</div>
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">
                         <i class="fas fa-clock"></i>
                     </div>
-                    <div class="stat-value">24/7</div>
+                    <div class="stat-value">24 Hours</div>
                     <div class="stat-label">Support Available</div>
                 </div>
                 <div class="stat-card">
