#	modified:   contact.html #	modified:   services.html

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - CyberKenya</title>
+    <title>Contact Us - Akubrecah Entertainment</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-shield-alt"></i>
-                    <span>CyberKenya</span>
+                    <span>Akubrecah Entertainment</span>
                 </div>
                 
                 <nav class="nav desktop-nav">
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="contact-details">
                                     <h4>Email Us</h4>
-                                    <p>info@cyberkenya.com</p>
+                                    <p>poweldayck@gmail.com</p>
                                     <span>We respond within 2 hours</span>
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                                 </div>
                                 <div class="contact-details">
                                     <h4>Call Us</h4>
-                                    <p>+254 700 123 456</p>
+                                    <p>+254 791 497 858</p>
                                     <span>24/7 Support Available</span>
                                 </div>
                             </div>
@@ -138,8 +138,8 @@
                                 </div>
                                 <div class="contact-details">
                                     <h4>Visit Us</h4>
-                                    <p>Nairobi, Kenya</p>
-                                    <span>Westlands Business District</span>
+                                    <p>Kapenguria, Kenya</p>
+                                    <span>Lokita Plaza</span>
                                 </div>
                             </div>
                             
@@ -159,9 +159,9 @@
                     <div class="emergency-card">
                         <h4>Quick Response</h4>
                         <p>Need immediate assistance? Our support team is ready to help you with any urgent requests or questions.</p>
-                        <a href="https://wa.me/254700123456" class="btn btn-whatsapp">
+                        <a href="https://wa.me/254791497858" class="btn btn-whatsapp">
                             <i class="fab fa-whatsapp"></i>
-                            WhatsApp: +254 700 123 456
+                            WhatsApp: +254 791 497 858
                         </a>
                     </div>
                 </div>
