--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services - CyberKenya</title>
+    <title>Our Services - Akubrecah Entertainment</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-shield-alt"></i>
-                    <span>CyberKenya</span>
+                    <span>Akubrecah Entertainment</span>
                 </div>
                 
                 <nav class="nav desktop-nav">
