--- a/testimonials.html
+++ b/testimonials.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testimonials - CyberKenya</title>
+    <title>Testimonials - Akubrecah Entertainment</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-shield-alt"></i>
-                    <span>CyberKenya</span>
+                    <span>Akubrecah Entertainment</span>
                 </div>
                 
                 <nav class="nav desktop-nav">
@@ -62,9 +62,9 @@
                     </div>
                     <p>"CyberKenya made my KRA registration process so smooth and hassle-free. Their team handled everything professionally and kept me updated throughout."</p>
                     <div class="testimonial-author">
-                        <div class="author-name">Sarah Kimani</div>
+                        <div class="author-name">Sarah Loktari</div>
                         <div class="author-position">Business Owner</div>
-                        <div class="author-company">Kimani Enterprises</div>
+                        <div class="author-company">Loksa Enterprises</div>
                     </div>
                 </div>
 
@@ -83,7 +83,7 @@
                     <div class="testimonial-author">
                         <div class="author-name">David Ochieng</div>
                         <div class="author-position">University Student</div>
-                        <div class="author-company">University of Nairobi</div>
+                        <div class="author-company">Kapenguria KMTC</div>
                     </div>
                 </div>
 
@@ -98,9 +98,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>"From logo design to website creation, CyberKenya transformed my business digital presence. Highly recommend their graphic design services."</p>
+                    <p>"From logo design to website creation, Akubrecah Entertainment transformed my business digital presence. Highly recommend their graphic design services."</p>
                     <div class="testimonial-author">
-                        <div class="author-name">Grace Wanjiku</div>
+                        <div class="author-name">Grace Chebet</div>
                         <div class="author-position">Small Business Owner</div>
                         <div class="author-company">Grace Fashion House</div>
                     </div>
@@ -119,7 +119,7 @@
                     </div>
                     <p>"Their cybersecurity training was comprehensive and practical. I now feel confident about protecting my business from digital threats."</p>
                     <div class="testimonial-author">
-                        <div class="author-name">John Mwangi</div>
+                        <div class="author-name">Daniel Kemoi</div>
                         <div class="author-position">IT Professional</div>
                         <div class="author-company">Tech Solutions Ltd</div>
                     </div>
@@ -138,9 +138,9 @@
                     </div>
                     <p>"The virtual assistance services have been a game-changer for my business. Professional, reliable, and always available when needed."</p>
                     <div class="testimonial-author">
-                        <div class="author-name">Mary Njeri</div>
+                        <div class="author-name">Isaac Njoroge</div>
                         <div class="author-position">Entrepreneur</div>
-                        <div class="author-company">Njeri Consultancy</div>
+                        <div class="author-company">Son of Abraham Consultancy</div>
                     </div>
                 </div>
 
