#	modified:   contact.html #	modified:   index.html #	new file:   podcasts.html #	modified:   services.html #	new file:   src/B13-Episode-1 (copy 1).mp3

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <a href="services.html" class="nav-link">Services</a>
                     <a href="testimonials.html" class="nav-link">Testimonials</a>
                     <a href="contact.html" class="nav-link contact-btn">Contact</a>
+                    <a href="podcasts.html" class="nav-link">Podcasts</a>
                 </nav>
                 
                 <button class="mobile-menu-btn">
