modified:   podcasts.html

--- a/podcasts.html
+++ b/podcasts.html
@@ -455,12 +455,12 @@
                 <!-- Podcast 2 -->
                 <div class="podcast-card">
                     <img src="https://images.pexels.com/photos/270288/pexels-photo-270288.jpeg" alt="Podcast B13-Episode-1" class="podcast-image" style="height: 180px; width: 100%; object-fit: cover;">
-                    <h3 class="podcast-title">Navigating Government e-Services</h3>
+                    <h3 class="podcast-title">Husein Mzee Mjamo</h3>
                     <div class="podcast-meta">
                         <span><i class="fas fa-calendar"></i> June 5, 2025</span>
                         <span><i class="fas fa-clock"></i> 23 min</span>
                     </div>
-                    <p class="podcast-description">A comprehensive guide to using Kenya's government digital platforms - KRA, NTSA, eCitizen, and more. Tips and tricks to save time and avoid common pitfalls.</p>
+                    <p class="podcast-description">Babu wa babu wa babu wa babu wa babuu...</p>
                     <audio controls class="podcast-player">
                         <source src="src/B13-Episode-1 (copy 1).mp3" type="audio/mpeg">
                        Your browser does not support the audio element.
